add .root{}: page grid

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Путешествия по России</title>
 </head>
 <body>
-  <div class="root">
+  <div class="root root_grid_simple">
     <div class="header"></div>
 
     <div class="main"></div>
