--- a/index.html
+++ b/index.html
@@ -20,7 +20,29 @@
 
     <main class="main"></main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <nav>
+        <ul class="footer__menu">
+          <li>
+            <a class="footer__link link" href="https://yandex.ru/maps">Карты</a>
+          </li>
+          <li>
+            <a class="footer__link link" href="https://yandex.ru/pogoda">Погода</a>
+          </li>
+          <li>
+            <a class="footer__link link" href="https://rasp.yandex.ru">Расписание</a>
+          </li>
+          <li>
+            <a class="footer__link link" href="https://calendar.yandex.ru">Календарь</a>
+          </li>
+          <li>
+            <a class="footer__link link" href="https://travel.yandex.ru">Путешествия</a>
+          </li>
+        </ul>
+      </nav>
+
+      <p class="footer__copyright">&copy; 2021. Мария Александрова</p>
+    </footer>
   </div>
 </body>
 </html>
