fix: header_langs-list

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <header class="header">
       <img class="header__logo" src="./images/svg/logo.svg" alt="Логотип проекта Путешествия по России">
 
-      <div class="header__langs">
-        <!-- нужен ли здесь список? Кажется, просто обёртки достаточно -->
-        <a class="header__lang-link header__lang-link_status_active link" href="#" lang="en">Ru</a>
-        <a class="header__lang-link link" href="#" lang="en">En</a>
-      </div>
+      <ul class="header__langs">
+        <li>
+          <a class="header__lang-link header__lang-link_status_active link" href="#" lang="en">Ru</a>
+        </li>
+        <li>
+          <a class="header__lang-link link" href="#" lang="en">En</a>
+        </li>
+      </ul>
     </header>
 
     <main class="main"></main>
