--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
       </ul>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="lead">
+        <h1 class="lead__title title">Путешествия по России</h1>
+
+        <p class="lead__subtitle">
+          Настоящая страна не в выпусках новостей, а здесь.
+        </p>
+
+        <figure class="lead__figure">
+          <img class="lead__image" src="./images/lead-image.jpg" alt="фотография: боковая нижняя полка плацкартного вагона, на которой, лицом к окну, лежит блондинка под белым казённым бельём.">
+          <figcaption class="lead__image-title">ваша полка — верхняя</figcaption>
+        </figure>
+      </section>
+    </main>
 
     <footer class="footer">
       <nav>
