--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Путешествия по России</title>
 </head>
 <body class="root">
-  <div class="root__grid grid grid_simple">
+  <div class="root__container grid grid_simple">
     <header class="header">
       <img class="header__logo" src="./images/svg/logo.svg" alt="Логотип проекта Путешествия по России">
 
