--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
           <figcaption class="lead__image-title">ваша полка — верхняя</figcaption>
         </figure>
       </section>
+
+      <section class="intro"></section>
+
+      <section class="photo-grid"></section>
+
+      <section class="places"></section>
+
+      <section class="cover"></section>
     </main>
 
     <footer class="footer">
