--- a/index.html
+++ b/index.html
@@ -67,7 +67,70 @@
 
       </section>
 
-      <section class="photo-grid"></section>
+      <section class="photo-grid">
+        <ul class="gallery">
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-train.jpg" alt="фотография: вид из окна движущегося поезда">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="фотография: высокогорье горы Атхарва Тулси">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-tuman.jpg" alt="фотография: туманное поле на рассвете. На переднем плане стог сена, на котором гордо стоит овчарка">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-sochi.jpg" alt="фотография: вид на туманный лес">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-arisa-chattasa.jpg" alt="фотография: крупный план автомобильного колеса на толстом слое льда">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-baikal.jpg" alt="фотография: пейзаж берега Байкала">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-elbrus.jpg" alt="фотография: пейзаж гор с видом на Эльбрус">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-stanislav-kondratiev.jpg" alt="концептуальная фотография: на переднем плане дорожный знак пешеходного перехода на фоне сложенных в кучу бетонно-металлических конусов">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-kamchatka.jpg" alt="фотография: пейзаж Камчатки">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-kamchatka2.jpg" alt="фотография: пейзаж Камчатки">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-baikal2.jpg" alt="фотография: пезйаж берега Байкала с высоты птичьего полёта">
+            </a>
+          </li>
+          <li class="gallery__item">
+            <a class="gallery__link" href="#" title="увеличить изображение">
+              <img class="gallery__image" src="./images/photo-grid-ergaki.jpg" alt="фотография: пейзаж природного парка Ергаки">
+            </a>
+          </li>
+        </ul>
+      </section>
 
       <section class="places"></section>
 
