--- a/index.html
+++ b/index.html
@@ -132,7 +132,33 @@
         </ul>
       </section>
 
-      <section class="places"></section>
+      <section class="places">
+        <article class="place">
+          <h3 class="place__title">Куршская коса</h3>
+
+          <div class="place__website">
+            <p class="place__url-heading">url</p>
+
+            <a class="place__link link" href="http://park-kosa.ru">park-kosa.ru</a>
+          </div>
+
+          <img class="place__image" src="./images/place-kurshskaya-kosa.jpg" alt="фотография: пейзаж Куршского залива">
+
+
+          <div class="place__paragraphs">
+            <p class="place__paragraph">
+              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной
+              стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
+            </p>
+
+            <p class="place__paragraph">
+              На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая
+              западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних
+              мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+            </p>
+          </div>
+        </article>
+      </section>
 
       <section class="cover"></section>
     </main>
