--- a/index.html
+++ b/index.html
@@ -259,7 +259,20 @@
         </article>
       </section>
 
-      <section class="cover"></section>
+      <section class="cover">
+
+
+        <div class="cover__overlay">
+          <h2 class="cover__title">
+            <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+            До Байкала «на собаках»
+            </a>
+          </h2>
+          <p class="cover__subtitle">
+            По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+          </p>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
