--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main class="main">
-      <section class="lead">
+      <section class="main__lead lead">
         <h1 class="lead__title title">Путешествия по России</h1>
 
         <p class="lead__subtitle">
@@ -35,7 +35,7 @@
         </figure>
       </section>
 
-      <section class="intro">
+      <section class="main__intro intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
 
         <p class="intro__text">
@@ -67,8 +67,8 @@
 
       </section>
 
-      <section class="photo-grid">
-        <ul class="gallery">
+      <section class="main__photo-grid photo-grid">
+        <ul class="photo-grid__gallery gallery">
           <li class="gallery__item">
             <a class="gallery__link" href="#" title="увеличить изображение">
               <img class="gallery__image" src="./images/photo-grid-train.jpg" alt="фотография: вид из окна движущегося поезда">
@@ -132,7 +132,7 @@
         </ul>
       </section>
 
-      <section class="places">
+      <section class="main__places places">
         <article class="place">
           <h3 class="place__title">Куршская коса</h3>
 
@@ -259,7 +259,7 @@
         </article>
       </section>
 
-      <section class="cover">
+      <section class="main__cover cover">
 
 
         <div class="cover__overlay">
