--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </ul>
       </nav>
 
-      <p class="footer__copyright">&copy; 2021. Мария Александрова</p>
+      <a class="footer__copyright link" href="https://github.com/Amaria-desveloper">&copy; 2021. Мария Александрова</a>
     </footer>
   </div>
 </body>
