--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="main">
       <section class="main__lead lead">
-        <h1 class="lead__title title">Путешествия по России</h1>
+        <h1 class="lead__title title title_size_main">Путешествия по России</h1>
 
         <p class="lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
@@ -36,7 +36,7 @@
       </section>
 
       <section class="main__intro intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <h2 class="intro__title title title_size_l">Чего мы там не видели?</h2>
 
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол,
@@ -134,7 +134,7 @@
 
       <section class="main__places places">
         <article class="place">
-          <h3 class="place__title">Куршская коса</h3>
+          <h3 class="place__title title title_size_m">Куршская коса</h3>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -160,7 +160,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title">Кольский</h3>
+          <h3 class="place__title title title_size_m">Кольский</h3>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -185,7 +185,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title">Алтай</h3>
+          <h3 class="place__title title title_size_m">Алтай</h3>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -210,7 +210,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title">Зимний Байкал</h3>
+          <h3 class="place__title title title_size_m">Зимний Байкал</h3>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -235,7 +235,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title">Карелия</h3>
+          <h3 class="place__title title title_size_m">Карелия</h3>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -260,10 +260,8 @@
       </section>
 
       <section class="main__cover cover">
-
-
         <div class="cover__overlay">
-          <h2 class="cover__title">
+          <h2 class="cover__title title title_size_cover">
             <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
             До Байкала «на собаках»
             </a>
