fix grid padding for mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body class="root">
   <div class="root__container grid grid_simple">
     <header class="header">
-      <img class="header__logo" src="./images/svg/logo.svg" alt="Логотип проекта Путешествия по России">
+      <a>
+        <img class="header__logo" src="./images/svg/logo.svg" alt="Логотип проекта Путешествия по России">
+      </a>
 
       <ul class="header__langs">
         <li>
@@ -297,7 +299,7 @@
         </ul>
       </nav>
 
-      <a class="footer__copyright link" href="https://github.com/Amaria-desveloper">&copy; 2021. Мария Александрова</a>
+      <a class="footer__copyright link" href="https://github.com/Amaria-desveloper" title="вёрстка учебного макета">&copy; 2021. Мария Александрова</a>
     </footer>
   </div>
 </body>
