fix photo size, href[target]

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
       <ul class="header__langs">
         <li>
-          <a class="header__lang-link header__lang-link_status_active link" href="#" lang="en">Ru</a>
+          <a class="header__lang-link header__lang-link_status_active link" href="#" target="_self" lang="en">Ru</a>
         </li>
         <li>
-          <a class="header__lang-link link" href="#" lang="en">En</a>
+          <a class="header__lang-link link" href="#" target="_self" lang="en">En</a>
         </li>
       </ul>
     </header>
@@ -116,12 +116,12 @@
           </li>
           <li class="photo-grid__item">
             <a class="photo-grid__link" href="#" title="увеличить изображение">
-              <img class="photo-grid__image" src="./images/photo-grid-kamchatka.jpg" alt="фотография: пейзаж Камчатки">
+              <img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="фотография: пейзаж Камчатки">
             </a>
           </li>
           <li class="photo-grid__item">
             <a class="photo-grid__link" href="#" title="увеличить изображение">
-              <img class="photo-grid__image" src="./images/photo-grid-kamchatka2.jpg" alt="фотография: пейзаж Камчатки">
+              <img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="фотография: пейзаж Камчатки">
             </a>
           </li>
           <li class="photo-grid__item">
@@ -144,7 +144,7 @@
           <div class="place__website">
             <p class="place__url-heading">url</p>
 
-            <a class="place__link link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <a class="place__link link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
 
           <img class="place__image" src="./images/place-kurshskaya-kosa.jpg" alt="фотография: пейзаж Куршского залива">
@@ -170,7 +170,7 @@
           <div class="place__website">
             <p class="place__url-heading">url</p>
 
-            <a class="place__link link" href=" https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <a class="place__link link" href=" https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
 
           <img class="place__image" src="./images/place-kolskii.jpg" alt="фотография: пейзаж Куршского залива">
@@ -195,7 +195,7 @@
           <div class="place__website">
             <p class="place__url-heading">url</p>
 
-            <a class="place__link link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            <a class="place__link link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
 
           <img class="place__image" src="./images/place-altai.jpg" alt="фотография: открытй ноутбук на перилах. На фоне: алтайский лес">
@@ -220,10 +220,10 @@
           <div class="place__website">
             <p class="place__url-heading">url</p>
 
-            <a class="place__link link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <a class="place__link link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
 
-          <img class="place__image" src="./images/place-baikal.jpg"
+          <img class="place__image" src="./images/place-winter-baikal.jpg"
             alt="фотография, крупный план: прозрачный байкальский лёд">
 
 
@@ -245,7 +245,7 @@
           <div class="place__website">
             <p class="place__url-heading">url</p>
 
-            <a class="place__link link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            <a class="place__link link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
 
           <img class="place__image" src="./images/place-karelia.jpg" alt="фотография: карельский пейзаж">
@@ -267,7 +267,7 @@
       <section class="main__cover cover">
         <div class="cover__overlay">
           <h2 class="cover__title title title_size_cover">
-            <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+            <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
             До Байкала «на собаках»
             </a>
           </h2>
@@ -282,24 +282,24 @@
       <nav>
         <ul class="footer__menu">
           <li>
-            <a class="footer__link link" href="https://yandex.ru/maps">Карты</a>
+            <a class="footer__link link" href="https://yandex.ru/maps" target="_blank">Карты</a>
           </li>
           <li>
-            <a class="footer__link link" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__link link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
           </li>
           <li>
-            <a class="footer__link link" href="https://rasp.yandex.ru">Расписание</a>
+            <a class="footer__link link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
           </li>
           <li>
-            <a class="footer__link link" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__link link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
           </li>
           <li>
-            <a class="footer__link link" href="https://travel.yandex.ru">Путешествия</a>
+            <a class="footer__link link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
           </li>
         </ul>
       </nav>
 
-      <a class="footer__copyright link" href="https://github.com/Amaria-desveloper" title="вёрстка учебного макета">&copy; 2021. Мария Александрова</a>
+      <a class="footer__copyright link" href="https://github.com/Amaria-desveloper" target="_blank" title="вёрстка учебного макета">&copy; 2021. Мария Александрова</a>
     </footer>
   </div>
 </body>
