test:fix href[target]

--- a/index.html
+++ b/index.html
@@ -75,62 +75,62 @@
       <section class="main__photo-grid">
         <ul class="photo-grid">
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-train.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="фотография: вид из окна движущегося поезда">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-atharva-tulsi.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="фотография: высокогорье горы Атхарва Тулси">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-tuman.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="фотография: туманное поле на рассвете. На переднем плане стог сена, на котором гордо стоит овчарка">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-sochi.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="фотография: вид на туманный лес">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-arisa-chattasa.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-arisa-chattasa.jpg" alt="фотография: крупный план автомобильного колеса на толстом слое льда">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-baikal.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="фотография: пейзаж берега Байкала">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-elbrus.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="фотография: пейзаж гор с видом на Эльбрус">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-stanislav-kondratiev.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-stanislav-kondratiev.jpg" alt="концептуальная фотография: на переднем плане дорожный знак пешеходного перехода на фоне сложенных в кучу бетонно-металлических конусов">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-kamchatka-1.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="фотография: пейзаж Камчатки">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-kamchatka-2.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="фотография: пейзаж Камчатки">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-baikal2.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-baikal2.jpg" alt="фотография: пезйаж берега Байкала с высоты птичьего полёта">
             </a>
           </li>
           <li class="photo-grid__item">
-            <a class="photo-grid__link" href="#" title="увеличить изображение">
+            <a class="photo-grid__link" href="./images/photo-grid-ergaki.jpg" target="_blank" title="увеличить изображение">
               <img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="фотография: пейзаж природного парка Ергаки">
             </a>
           </li>
