--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <ul class="header__langs">
         <li>
-          <a class="header__lang-link header__lang-link_status_active link" href="#" target="_self" lang="en">Ru</a>
+          <a class="header__lang-link header__lang-link_active link" href="#" target="_self" lang="en">Ru</a>
         </li>
         <li>
           <a class="header__lang-link link" href="#" target="_self" lang="en">En</a>
@@ -25,7 +25,7 @@
 
     <main class="main">
       <section class="main__lead lead">
-        <h1 class="lead__title title title_size_main">Путешествия по России</h1>
+        <h1 class="lead__title">Путешествия по России</h1>
 
         <p class="lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
@@ -38,7 +38,7 @@
       </section>
 
       <section class="main__intro intro">
-        <h2 class="intro__title title title_size_l">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы там не видели?</h2>
 
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол,
@@ -51,19 +51,19 @@
 
          <ul class="intro__list">
           <li>
-            <strong>Часовых поясов</strong> 11
+            <span class="intro__strong">Часовых поясов</span> 11
           </li>
           <li>
-            <strong>Объектов природного наследия ЮНЕСКО</strong> 12
+            <span class="intro__strong">Объектов природного наследия ЮНЕСКО</span> 12
           </li>
           <li>
-            <strong>Объектов культурного наследия ЮНЕСКО</strong> 16
+            <span class="intro__strong">Объектов культурного наследия ЮНЕСКО</span> 16
           </li>
           <li>
-            <strong>Природных заповедников</strong> 105
+            <span class="intro__strong">Природных заповедников</span> 105
           </li>
           <li>
-            <strong>Аэропортов</strong> 241
+            <span class="intro__strong">Аэропортов</span> 241
           </li>
          </ul>
 
@@ -136,7 +136,7 @@
 
       <section class="main__places places">
         <article class="place">
-          <h3 class="place__title title title_size_m">Куршская коса</h3>
+          <h2 class="place__title">Куршская коса</h2>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -162,7 +162,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title title title_size_m">Кольский</h3>
+          <h2 class="place__title">Кольский</h2>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -187,7 +187,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title title title_size_m">Алтай</h3>
+          <h2 class="place__title">Алтай</h2>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -212,7 +212,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title title title_size_m">Зимний Байкал</h3>
+          <h2 class="place__title">Зимний Байкал</h2>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -237,7 +237,7 @@
         </article>
 
         <article class="place">
-          <h3 class="place__title title title_size_m">Карелия</h3>
+          <h2 class="place__title">Карелия</h2>
 
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -263,7 +263,7 @@
 
       <section class="main__cover cover">
         <div class="cover__overlay">
-          <h2 class="cover__title title title_size_cover">
+          <h2 class="cover__title">
             <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
             До Байкала «на собаках»
             </a>
