--- a/index.html
+++ b/index.html
@@ -262,16 +262,14 @@
       </section>
 
       <section class="main__cover cover">
-        <div class="cover__overlay">
+        <a class="cover__link cover__link_overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">
-            <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
             До Байкала «на собаках»
-            </a>
           </h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
-        </div>
+        </a>
       </section>
     </main>
 
