--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="root">
   <div class="root__container grid">
     <header class="header">
-      <a class="header__logo link" href="#">
-        <img src="./images/svg/logo.svg" alt="Логотип проекта Путешествия по России">
+      <a class="header__logo link" href="#" target="_self">
+        <img class="header__logo-image" src="./images/svg/logo.svg" alt="Логотип проекта Путешествия по России">
       </a>
 
       <ul class="header__langs">
