fix header href[title]

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="root">
   <div class="root__container grid">
     <header class="header">
-      <a class="header__logo link" href="#">
+      <a class="header__logo link" href="#" target="_self">
         <img src="./images/svg/logo.svg" alt="Логотип проекта Путешествия по России">
       </a>
 
